# nginxctl

./: .gitignore  LICENSE  Pipfile  README.md  nginxctl.py  requirements.txt  setup.cfg  setup.py
commands/: site.py
nginxctl/: main.py
src/nginxctl/: main.py
src/nginxctl/commands/: service.py  site.py
