[metadata]
name = nginxctl
description = a commandline app for controlling nginx configs and more
author = Alireza Rabie
license = MIT
version = 0.2.0
license_file = LICENSE
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    nginxctl
install_requires =
    click>=8
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    nginxctl = nginxctl.main:run
